objects/SMAX_PS_ErrorLog__c.object
<CustomObject>
    <description>Used to capture integration / batch job / transaction error logs.</description>
    <label>SMax Error Log</label>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMax Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Link__c</fullName>
        <description>URL of error.</description>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Type__c</fullName>
        <description>Captures type of error.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Method__c</fullName>
        <description>Captures the method that was the source of the error.</description>
        <label>Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Message__c</fullName>
        <description>Used to capture the error message.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>